Beginning to beautiful soup for autonav

--- a/Grocery.ipynb
+++ b/Grocery.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "id": "eeeb6be6",
+   "execution_count": null,
+   "id": "29b55835",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,8 +14,10 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "92616bff",
-   "metadata": {},
+   "id": "6a6c2568",
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -94,8 +96,10 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "e8d5b499",
-   "metadata": {},
+   "id": "5d86471d",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -681,7 +685,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "c599f2ca",
+   "id": "21834558",
    "metadata": {},
    "outputs": [
     {
@@ -735,8 +739,10 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "ae3e857a",
-   "metadata": {},
+   "id": "1d6c61eb",
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -760,16 +766,17 @@
     }
    ],
    "source": [
-    "Search = input(\"What ingredient are you looking for? \")\n",
-    "for column in Grocery2:\n",
-    "    result = Grocery2[column].str.find(Search).sum()\n",
-    "    print(result)"
+    "# Eventually, allow for searching for an ingredient to use.\n",
+    "# Search = input(\"What ingredient are you looking for? \")\n",
+    "# for column in Grocery2:\n",
+    "#     result = Grocery2[column].str.find(Search).sum()\n",
+    "#     print(result)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "id": "e7439799",
+   "execution_count": 117,
+   "id": "8185b09a",
    "metadata": {
     "scrolled": true
    },
@@ -777,31 +784,22 @@
     {
      "data": {
       "text/plain": [
-       "['Beef',\n",
-       " 'Beef',\n",
-       " 'Buns',\n",
-       " 'Cheddar',\n",
-       " 'Chicken',\n",
-       " 'Chicken',\n",
+       "['Carrots',\n",
+       " 'Celery',\n",
+       " 'Chicken Breasts',\n",
        " 'Chicken Stock',\n",
-       " 'Colby Jack Cheese',\n",
-       " 'Crust',\n",
-       " 'Fries',\n",
-       " 'Green Onions',\n",
-       " 'Milk',\n",
-       " 'Rice',\n",
-       " 'Ritz',\n",
-       " 'Sauce',\n",
-       " 'Toppings',\n",
-       " 'Vegetables']"
+       " 'Onion',\n",
+       " 'Rice a Roni Long Grain and Wild Rice',\n",
+       " 'scallions']"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Select the \n",
     "List = []\n",
     "for meal in Meals:\n",
     "    for column in Grocery2.columns:\n",
@@ -817,7 +815,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6333daa2",
+   "id": "205dc74d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -826,6 +824,82 @@
     "# Assign Days of the week to meals and make schedule\n",
     "# Aggregate list to remove duplicates"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97899c8b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import Splinter, BeautifulSoup, and Pandas\n",
+    "from splinter import Browser\n",
+    "from bs4 import BeautifulSoup\n",
+    "from webdriver_manager.chrome import ChromeDriverManager\n",
+    "import json\n",
+    "import numpy\n",
+    "import pandas as pd\n",
+    "import re\n",
+    "import requests\n",
+    "import time\n",
+    "\n",
+    "from sqlalchemy import create_engine\n",
+    "import psycopg2\n",
+    "\n",
+    "# from config import db_password"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "453a6c6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "====== WebDriver manager ======\n",
+      "Current google-chrome version is 97.0.4692\n",
+      "Get LATEST driver version for 97.0.4692\n",
+      "There is no [win32] chromedriver for browser 97.0.4692 in cache\n",
+      "Get LATEST driver version for 97.0.4692\n",
+      "Trying to download new driver from https://chromedriver.storage.googleapis.com/97.0.4692.71/chromedriver_win32.zip\n",
+      "Driver has been saved in cache [C:\\Users\\jason\\.wdm\\drivers\\chromedriver\\win32\\97.0.4692.71]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Set up Splinter\n",
+    "executable_path = {'executable_path': ChromeDriverManager().install()}\n",
+    "browser = Browser('chrome', **executable_path, headless=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f965044",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = \"https://www.dillons.com/\"\n",
+    "browser.visit(url)\n",
+    "page_html = requests.get(url).content\n",
+    "soup = BeautifulSoup(page_html, 'html.parser')\n",
+    "buttons = soup.find_all(\"button\")\n",
+    "for button in buttons:\n",
+    "    print(button)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f725281a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
